<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/menuItemLocationOFF"
        android:icon="@drawable/no_location"
        android:title="botonLocationOFF"
        android:enabled="false"
        app:showAsAction="always"
        android:visible="true"

        />
    <item
        android:id="@+id/menuItemLocationON"
        android:icon="@drawable/yes_location"
        android:title="botonLocationON"
        android:enabled="false"
        app:showAsAction="always"
        android:visible="false"

        />
    <item
        android:id="@+id/menuItemRefresh"
        android:icon="@drawable/refresh"
        android:title="botonRefresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemFiltro"
        android:icon="@drawable/filter"
        android:title="botonFiltro"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Información" />
    <item
        android:id="@+id/menuItemUser"
        android:title="Configuración" />
</menu>