...
                        android:text="Tipo de cargador"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:inputType="textMultiLine" />

                    <Spinner
                        android:id="@+id/spnChargerType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:backgroundTint="#777"
                        android:dropDownWidth="wrap_content"
                        android:spinnerMode="dropdown" />
...
